...
        android:id="@+id/movie_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/movie_image"
        android:textSize="40px"
        android:typeface="monospace"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/movie_image"
...
        android:layout_alignBottom="@id/movie_image"
        android:layout_marginLeft="100dp"
        android:focusable="false"
        android:src="@drawable/ic_playlist_add_black_24dp" />

    <Button
        android:id="@+id/movie_delete"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@id/movie_image"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="400dp"
...
        android:layout_alignBottom="@+id/movie_image"
        android:layout_marginRight="50dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/movie_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/movie_image"
        android:layout_marginLeft="350dp"
        android:text="@string/details" />

...
