...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/green_background"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/top_rounded_rectangle"
                android:backgroundTint="@color/teal_200" />

            <TextView
...

                </LinearLayout>

            </HorizontalScrollView>

            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/multiple_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="270dp"
...
                    android:layout_height="wrap_content"
                    fab:fab_colorPressed="#ffffff"
                    fab:fab_size="mini"
                    fab:fab_title="WATCHING" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorPressed="#ffffff"
                    fab:fab_size="mini"
                    fab:fab_title="WATCHED" />
            </com.getbase.floatingactionbutton.FloatingActionsMenu>
...
